# TaskPlanner

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: install.yml  releases.yml  standalone.yml  ubuntu.yml
documentation/: CMakeLists.txt
include/: App.hpp  ConsolePrinter.hpp  ConsoleUI.hpp  Date.hpp  Entry.hpp  Priority.hpp  Serialization.hpp  Sorters.hpp  Time.hpp  Utility.hpp
source/: App.cpp  ConsolePrinter.cpp  ConsoleUI.cpp  Date.cpp  Entry.cpp  Serialization.cpp  Time.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: Date.cpp  Entry.cpp  Priority.cpp  Serialization.cpp  Sorters.cpp  Time.cpp
